added example gantt chart for observations schedules, updated receptor status disaply to work with python identifiers, fixed deactivating users in admin display

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/d3/d3-chart-directive.js"></script>
 <script src="app/d3/d3-treemap.js"></script>
+<script src="app/d3/d3-gantt-chart.js"></script>
 <script src="app/d3/d3-wind-rose.js"></script>
 <script src="app/d3/d3-service.js"></script>
 <script src="app/admin/admin.js"></script>
@@ -95,6 +96,7 @@
 <script src="app/alarms/alarms.js"></script>
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/navigation/navigation-widget.js"></script>
+<script src="app/widgets/gantt/gantt-widget.js"></script>
 <script src="app/widgets/dashboard-structures.js"></script>
 <script src="app/scheduler/scheduler-home.js"></script>
 <script src="app/scheduler/schedule-block-drafts/schedule-block-drafts.js"></script>
@@ -102,7 +104,6 @@
 <script src="app/scheduler/subarray-resources/subarray-resources.js"></script>
 <script src="app/scheduler/observations/observations-detail.js"></script>
 <script src="app/scheduler/observations/observations-overview.js"></script>
-<!--<script src="app/widgets/gantt/gantt-widget.js"></script>-->
 <!-- Add New Component JS Above -->
 
 <!--dont use md-whiteframe class because it leaves black artifacts on sidenav-->
