--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -4,7 +4,8 @@
         <md-toolbar class="panel-toolbar md-whiteframe-z1" ng-mouseenter="showAlarmTools = true;" ng-mouseleave="showAlarmTools = false;">
             <div class="md-toolbar-tools" layout="row">
                <span>
-                    <md-checkbox ng-model="vm.selectAllAlarms" ng-click="vm.toggleSelectAllAlarms(!vm.selectAllAlarms)" aria-label="Select All Alarms">
+                    <md-checkbox md-theme="{{themePrimaryButtons}}" ng-model="vm.selectAllAlarms" ng-click="vm.toggleSelectAllAlarms(!vm.selectAllAlarms)" aria-label="Select All Alarms"
+                        class="md-primary">
                         <b>Current Alarms</b>
                     </md-checkbox>
                     <md-tooltip>Select All Alarms</md-tooltip>
@@ -16,7 +17,7 @@
                     <md-button ng-click="vm.knowSelectedAlarms()" aria-label="Add as Known" class="md-primary md-raised">Add as Known</md-button>
                     <md-button ng-click="vm.acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
                     <md-button ng-click="vm.clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared</md-checkbox>
+                    <md-checkbox class="md-primary alarms-tools-checkbox" ng-model="vm.showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared</md-checkbox>
                 </div>
             </div>
             <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 1; border: 0;" layout="row" layout-align="start center">
@@ -123,7 +124,7 @@
         <md-toolbar class="panel-toolbar md-whiteframe-z1" ng-mouseenter="showKnownAlarmTools = true;" ng-mouseleave="showKnownAlarmTools = false;">
             <div class="md-toolbar-tools" layout="row">
                <span>
-                    <md-checkbox ng-model="vm.selectAllKnownAlarms" ng-click="vm.toggleSelectAllKnownAlarms(!vm.selectAllKnownAlarms)" aria-label="Select All Known Alarms">
+                    <md-checkbox md-theme="{{themePrimaryButtons}}" class="md-primary" ng-model="vm.selectAllKnownAlarms" ng-click="vm.toggleSelectAllKnownAlarms(!vm.selectAllKnownAlarms)" aria-label="Select All Known Alarms">
                         <b>Known Alarms</b>
                     </md-checkbox>
                     <md-tooltip>Select All Known Alarms</md-tooltip>
@@ -134,10 +135,10 @@
                            ng-model-options="{ debounce: 300 }" ng-model="vm.q2" placeholder="Search Known Alarms..."/>
                     <md-button ng-click="vm.cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
                     <div layout="column">
-                        <md-checkbox style="font-size: 14px; margin-top: 2px; margin-bottom: 2px;" class="alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show
+                        <md-checkbox style="font-size: 14px; margin-top: 2px; margin-bottom: 2px;" class="md-primary alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show
                             Nominal
                         </md-checkbox>
-                        <md-checkbox style="font-size: 14px; margin-top: 2px; margin-bottom: 2px;" class="alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">
+                        <md-checkbox style="font-size: 14px; margin-top: 2px; margin-bottom: 2px;" class="md-primary alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">
                             Show Maintenance
                         </md-checkbox>
                     </div>
