--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -47,7 +47,7 @@
         </md-toolbar>
         <div class="schedule-draft-data-list" flex>
             <div ng-repeat="item in vm.scheduleDraftData | filter:vm.q | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse as filteredDraftItems"
-                 ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
+                 ng-click="vm.setSelectedScheduleDraft(item)"
                  ng-class="{'selected-draft-schedule-row': item === vm.selectedScheduleDraft}" class="schedule-draft-item animate-repeat" layout="column">
                 <div layout="row" layout-align="center center">
                     <div layout="row" class="schedule-block-name-div">
@@ -56,15 +56,13 @@
                     </div>
 
                     <input ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
-                           aria-label="Description" class="schedule-item-description-input"
+                           aria-label="Description" class="schedule-item-description-input" style="height: 27px;"
                            ng-model="item.description" placeholder="Description"/>
 
-                    <md-button aria-label="Schedule Draft Type" style="text-align: left; width: 122px;" class="dropdown-toggle schedule-item-input" type="button"
-                               data-toggle="dropdown" layout="row"
-                               ng-click="vm.openTypePicker(item, $event);">
-                        <span flex>{{item.type}}</span>
-                        <span class="fa fa-caret-down" style="position: absolute; right: 5px; top: 8px;"></span>
-                    </md-button>
+                    <md-select ng-model="item.type" aria-label="Schedule Draft Type" style="margin-top: 4px; width: 134px; margin-left: 4px; margin-right:4px;"
+                               class="md-primary" md-theme="{{themePrimaryButtons}}" ng-click="item.isDirty = true; vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();">
+                        <md-option ng-value="type" ng-repeat="type in vm.types">{{type}}</md-option>
+                    </md-select>
                     <input ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text" aria-label="Select a Date and Time" title="UTC"
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
@@ -101,14 +99,6 @@
 
     <div id="schedulerDatePickerMenu" class="datepickerMenu md-whiteframe-z1" ng-show="vm.showDatePicker">
         <datetimepicker data-ng-model="vm.currentSelectedDate" data-on-set-time="vm.onTimeSet(newDate, oldDate)"></datetimepicker>
-    </div>
-
-    <div id="schedulerTypePickerMenu" ng-show="vm.showTypePicker" class="datepickerMenu md-whiteframe-z1">
-        <md-list layout="column">
-            <md-item ng-repeat="type in vm.types">
-                <md-button ink-ripple role="menuitem" ng-click="vm.setScheduleDraftType(type)" style="width: 170px; font-size: 14px; height: 38px; padding: 2px;">{{type}}</md-button>
-            </md-item>
-        </md-list>
     </div>
 
     <div id="schedulerEditMenu" ng-show="vm.showEditMenu" class="datepickerMenu md-whiteframe-z1">
