touched up receptor status displays, and fixed services, added a clone object for each receptor for the zoomable treemap to work, started on the top health status displat

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <script src="app/d3/receptor-status-partition-map.js"></script>
 <script src="app/d3/receptor-status-icicle-map.js"></script>
 <script src="app/d3/receptor-status-sunburst-map.js"></script>
+<script src="app/d3/status-single-level-tree-map.js"></script>
 <script src="app/admin/admin.js"></script>
 <script src="app/util/util.js"></script>
 <script src="app/alarms/alarms.js"></script>
