--- a/app/health/health.html
+++ b/app/health/health.html
@@ -1,5 +1,3 @@
-<div class="view-container-full" ng-controller="HealthCtrl as vm">
-
-    <status-single-level-tree-map></status-single-level-tree-map>
-
+<div flex layout="row" layout-align="center start" ng-controller="HealthCtrl as vm" style="min-width: 1100px; overflow: auto; margin-top: 4px;">
+    <status-single-level-tree-map flex style="display: inline-block; margin-left: 4px; margin-right:4px;" ng-repeat="tree in vm.topStatusTrees" data="tree"></status-single-level-tree-map>
 </div>
