--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -1,23 +1,25 @@
 <div flex style="min-width: 1015px; min-height: 920px;" ng-controller="ReceptorStatusCtrl as vm">
-    <div ng-show="showLegend" class="md-whiteframe-z3 legend-popup" style="display:inline-block" layout="column" layout-align="center start">
-        <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
-        <div layout="row" layout-align="start center"><div class="color-patch nominal-child" title="Green"></div><span>Nominal</span></div>
-        <div layout="row" layout-align="start center"><div class="color-patch warn-child" title="Amber"></div><span>Warn</span></div>
-        <div layout="row" layout-align="start center"><div class="color-patch error-child" title="Red"></div><span>Error</span></div>
-        <div layout="row" layout-align="start center"><div class="color-patch failure-child" title="Brown"></div><span>Failure</span></div>
-        <div layout="row" layout-align="start center"><div class="color-patch unreachable-child" title="Pink"></div><span>Unreachable</span></div>
-        <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Blue"></div><span>Inactive</span></div>
+    <div class="md-whiteframe-z3 legend-popup" style="display:inline-block" layout="column" layout-align="center start">
+        <md-button style="margin-right: 8px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = true" ng-click="showLegend = !showLegend"
+                   aria-label="Show Legend">
+            <span ng-if="!showLegend">Show Legend</span>
+            <span ng-if="showLegend">Hide Legend</span>
+        </md-button>
+        <div layout="column" ng-show="showLegend">
+            <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch nominal-child" title="Green"></div><span>Nominal</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch warn-child" title="Amber"></div><span>Warn</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch error-child" title="Red"></div><span>Error</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch failure-child" title="Brown"></div><span>Failure</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch unreachable-child" title="Pink"></div><span>Unreachable</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Blue"></div><span>Inactive</span></div>
+        </div>
     </div>
     <div style="padding-left:16px; padding-right:16px; padding-top:8px;">
         <div md-theme="{{themePrimary}}" class="" layout="row" layout-align="start center" class="md-toolbar-tools-small">
 
             <span flex></span>
-            <md-button style="margin-right: 8px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = true" ng-click="showLegend = !showLegend"
-                aria-label="Show Legend">
-                <span ng-if="!showLegend">Show Legend</span>
-                <span ng-if="showLegend">Hide Legend</span>
-            </md-button>
-            <md-select ng-model="vm.mapType" aria-label="Display Type" style="margin-top: 0px; margin-left: 4px;width: 134px; margin-right:8px;"
+            <md-select ng-model="vm.mapType" style="margin-top: 0px; margin-left: 4px;width: 134px; margin-right:8px;"
                        class="md-primary" md-theme="{{themePrimaryButtons}}">
                 <md-option ng-value="type" ng-repeat="type in vm.mapTypes">{{type}}</md-option>
             </md-select>
