--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -19,7 +19,7 @@
         <div md-theme="{{themePrimary}}" class="" layout="row" layout-align="start center" class="md-toolbar-tools-small">
 
             <span flex></span>
-            <md-select ng-model="vm.mapType" style="margin-top: 0px; margin-left: 4px;width: 134px; margin-right:8px;"
+            <md-select ng-model="vm.mapType" style="margin-top: 0px; margin-left: 4px; margin-right:8px;"
                        class="md-primary" md-theme="{{themePrimaryButtons}}">
                 <md-option ng-value="type" ng-repeat="type in vm.mapTypes">{{type}}</md-option>
             </md-select>
