changed activate button's icon to fa-certificate

--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -79,7 +79,7 @@
                         <span class="fa fa-ban"></span>
                     </button>
                     <button title="Activate User" ng-show="!user.temp && !user.activated" class="user-row-button" ng-click="vm.activateUser(user)">
-                        <span class="fa fa-ban"></span>
+                        <span class="fa fa-certificate"></span>
                     </button>
                     <button title="Undo User Changes" class="user-row-button" ng-click="vm.undoUserChanges(user)">
                         <span class="fa fa-undo"></span>
