--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -60,7 +60,8 @@
         </md-toolbar>
 
         <div id="userListId" flex class="user-list">
-            <div class="user-row animate-repeat" ng-repeat="user in vm.userData | filter:q | orderBy:vm.orderBy.value:vm.orderBy.reverse as results track by user.id"
+            <!--item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id})-->
+            <div class="user-row animate-repeat" ng-repeat="user in vm.sortedUserData = (vm.userData | filter:q | orderBy:vm.orderBy.value:vm.orderBy.reverse) track by user.id"
                  flex layout="row" layout-align="start center" style="background: white;"
                  ng-if="user.activated || vm.showDeactivatedUsers" ng-class="{ 'deactivated-user': !user.activated, 'activated-user': user.activated }">
                 <input flex type="text" placeholder="Name" class="user-admin-input" md-theme="{{themeSecondary}}" ng-attr-id="{{ 'user-name-input-' + user.name }}"
