removed some unsused navigation buttons

--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -12,12 +12,12 @@
         <md-button aria-label="Health and State" class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')">Receptor Status</md-button>
 
         <md-button aria-label="Scheduler" class="md-raised md-primary" ng-click="vm.stateGo('scheduler')">Scheduler Home</md-button>
-        <md-button aria-label="Weather" class="md-raised md-primary" ng-click="vm.stateGo('weather')" disabled>Weather</md-button>
-        <md-button aria-label="Sensor Graphs" class="md-raised md-primary" ng-click="vm.stateGo('sensorGraph')" disabled>Sensor Graphs</md-button>
+        <!--<md-button aria-label="Weather" class="md-raised md-primary" ng-click="vm.stateGo('weather')" disabled>Weather</md-button>-->
+        <md-button aria-label="Sensor Graphs" class="md-raised md-primary" ng-click="vm.stateGo('sensorGraph')">Sensor Graphs</md-button>
 
         <md-button aria-label="Admin" class="md-raised md-primary" ng-click="vm.stateGo('admin')">Admin</md-button>
-        <md-button aria-label="Log Reports" class="md-raised md-primary" disabled>Log Reports</md-button>
-        <md-button aria-label="Source Catalogues" class="md-raised md-primary" disabled>Source Catalogues</md-button>
+        <!--<md-button aria-label="Log Reports" class="md-raised md-primary" disabled>Log Reports</md-button>-->
+        <!--<md-button aria-label="Source Catalogues" class="md-raised md-primary" disabled>Source Catalogues</md-button>-->
 
     </div>
 </div>
