--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -24,7 +24,6 @@
     </div>
 
     <div ng-if="vm.isUserAdmin" class="md-whiteframe-z1" flex layout="column" style="margin-bottom: 16px; position: relative; min-height: 452px;">
-        <loading-overlay ng-show="vm.userListProcessingServerCall"></loading-overlay>
         <md-toolbar class="panel-toolbar md-whiteframe-z1" ng-mouseenter="showUserTools = true;" ng-mouseleave="showUserTools = false;">
             <div class="unselectable md-toolbar-tools" layout="row">
                 <span flex ng-click="vm.setOrderBy('id')" style="cursor: pointer;"><span>katGUI Users<md-tooltip>Sort by database ID</md-tooltip></span></span>
@@ -61,8 +60,8 @@
         </md-toolbar>
 
         <div id="userListId" flex class="user-list">
-            <div class="user-row animate-repeat" ng-repeat="user in vm.userData | filter:q | orderBy:vm.orderBy.value:vm.orderBy.reverse as results track by user.id"
-                 flex layout="row" layout-align="start center" style="background: white;"
+            <div class="user-row animate-repeat" flex layout="row" layout-align="start center" style="background: white;"
+                 ng-repeat="user in vm.userData | filter:{activated: !vm.showDeactivatedUsers} | regexSearch:vm.orderByFields:q | orderBy:vm.orderBy.value:vm.orderBy.reverse track by user.id"
                  ng-if="user.activated || vm.showDeactivatedUsers" ng-class="{ 'deactivated-user': !user.activated, 'activated-user': user.activated }">
                 <input flex type="text" placeholder="Name" class="user-admin-input" md-theme="{{themeSecondary}}" ng-attr-id="{{ 'user-name-input-' + user.name }}"
                        label="Name" ng-disabled="!user.editing" ng-model="user.name" style="max-width: 265px; min-width: 265px;"/>
