--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -1,6 +1,6 @@
 <div flex layout="column" style="min-width: 1515px; min-height: 850px; margin-bottom: 8px;" ng-controller="SubArrayObservationsDetail as vm">
     <div layout="row" flex>
-        <div flex layout="column" style="margin: 0;">
+        <div flex layout="column" style="margin: 0;" ng-click="vm.closeEditMenu();">
 
             <div flex style="min-height: 150px;" layout="column" class="md-whiteframe-z1 schedule-list"
                  ng-class="{'md-whiteframe-z1': !vm.selectedSchedule, 'whiteframe-z1-left': vm.selectedSchedule}">
@@ -34,10 +34,6 @@
                                 <span style="text-transform: uppercase;">{{item.type}}</span>
                             </div>
                             <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
-                            <md-button aria-label="Move To Draft" md-theme="default" class="scheduler-inline-button"
-                                       ng-click="vm.moveScheduleRowToDraft(item)" title="Move to Draft">
-                                <span class="fa fa-chevron-up"></span>
-                            </md-button>
                             <md-button ng-show="item.state !== 'ACTIVE'" md-theme="green" aria-label="Execute Schedule" class="scheduler-inline-button md-primary"
                                        ng-click="vm.executeSchedule(item, $event)" title="Execute">
                                 <span class="fa fa-play"></span>
@@ -46,9 +42,9 @@
                                        ng-click="vm.stopExecuteSchedule(item)" title="Stop Execution">
                                 <span class="fa fa-stop"></span>
                             </md-button>
-                            <md-button aria-label="Move Schedule To Finished" md-theme="default" class="scheduler-inline-button"
-                                       ng-click="vm.moveScheduleRowToFinished(item)" title="Complete">
-                                <span class="fa fa-check"></span>
+                            <md-button style="transition: 0s;" aria-label="Show Edit Menu" ng-click="vm.openSchedulerEditMenu(item, $event);"
+                                       class="scheduler-inline-button">
+                                <span class="fa fa-ellipsis-v"></span>
                             </md-button>
                         </div>
                     </div>
@@ -139,14 +135,7 @@
                         <md-subheader class="list-subheader-title">Allocated</md-subheader>
                         <div ng-repeat="resource in vm.allocations | filter:{sub_nr:vm.subarray_id} | filter:{sb_id_code:vm.selectedSchedule.id_code}" layout-align="center center"
                              class="resource-pool-item animate-repeat" layout="row">
-                            <!--<span class="fa" style="font-size: 18px; min-width: 18px;" ng-class="{'fa-warning error-text':resource.state === 'faulty'}" title="Resource Marked Faulty"></span>-->
-                            <!--<span class="fa fa-wrench maintenance-text" ng-if="resource.in_maintenance" title="Resource in Maintenance" style="font-size: 18px; margin-left: 4px;"></span>-->
-                            <!--<span flex style="font-size:18px; margin-left: 4px;" ng-class="{'error-text':resource.state === 'faulty', 'maintenance-text':resource.in_maintenance}">{{resource.name}}</span>                            -->
                             <span flex style="font-size:18px; margin-left: 4px;">{{resource.name}}</span>
-                            <!--<md-button ng-click="vm.markResourceFaulty(resource);" style="height:38px; width:38px;" aria-label="Mark Resource Faulty"-->
-                            <!--title="Mark Resource As Faulty">-->
-                            <!--<span class="fa fa-exclamation-circle"></span>-->
-                            <!--</md-button>-->
                         </div>
                     </div>
                     <div layout-fill flex class="schedule-block-resource-window md-whiteframe-z1" style="z-index: 1;" layout="column">
@@ -183,6 +172,27 @@
             </div>
         </div>
     </div>
-
+    <div id="schedulerEditMenu" ng-show="vm.showEditMenu" class="datepickerMenu md-whiteframe-z1">
+        <md-list layout="column">
+            <md-item>
+                <md-button aria-label="Move To Draft" class="scheduler-menu-item-button"
+                           ng-click="vm.moveSelectedSBToDraft()" title="Move Schedule Block to Draft">
+                    <span>Move to Draft</span>
+                </md-button>
+            </md-item>
+            <md-item>
+                <md-button aria-label="View Progress" class="scheduler-menu-item-button"
+                           ng-click="vm.viewSelectedSBTaskLog()" title="View Progress in a New Tab">
+                    <span>View Progress</span>
+                </md-button>
+            </md-item>
+            <md-item>
+                <md-button aria-label="Move Schedule To Completed" md-theme="default" class="scheduler-menu-item-button"
+                           ng-click="vm.moveSelectedSBToFinished()" title="Move Schedule Block to Complete">
+                    <span>Move To Completed</span>
+                </md-button>
+            </md-item>
+        </md-list>
+    </div>
 </div>
 
