added View Tasklog buttons to schedule block drafts and draft assignment displays

--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -109,6 +109,10 @@
                 ng-click="vm.verifySelectedDraftRow()">Verify Draft</md-button>
             </md-item>
             <md-item>
+                <md-button role="menuitem" style="width: 170px; font-size:14px; height: 38px; padding: 2px;"
+                           ng-click="vm.viewSBTasklog()">View Tasklog</md-button>
+            </md-item>
+            <md-item>
                 <md-button role="menuitem" style="width: 170px; font-size: 14px; height: 38px; padding: 2px;" ng-click="vm.removeSelectedDraftRow()">Delete Draft</md-button>
             </md-item>
         </md-list>
