--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -139,6 +139,10 @@
                            ng-click="vm.verifyCurrentMenuItemDraft()">Verify Draft</md-button>
             </md-item>
             <md-item>
+                <md-button role="menuitem" style="width: 170px; font-size:14px; height: 38px; padding: 2px;"
+                           ng-click="vm.viewSBTasklog()">View Tasklog</md-button>
+            </md-item>
+            <md-item>
                 <md-button role="menuitem" style="width: 170px; font-size: 14px; height: 38px; padding: 2px;"
                            ng-click="vm.scheduleCurrentMenuItemDraft()">Schedule Draft</md-button>
             </md-item>
