--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -11,11 +11,6 @@
                     <span class="fa fa-check"></span>
                     <md-tooltip>Save All Changes</md-tooltip>
                 </md-button>
-                <!--<md-button aria-label="Create A Schedule" style="font-size: 16px; margin-left: 4px" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"-->
-                           <!--ng-click="vm.addDraftSchedule()">-->
-                    <!--<span class="fa fa-plus"></span>-->
-                    <!--<md-tooltip>Create A Draft Schedule</md-tooltip>-->
-                <!--</md-button>-->
             </div>
 
             <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 1;" layout="row" layout-align="center center">
@@ -50,11 +45,14 @@
                  ng-click="vm.setSelectedScheduleDraft(item)"
                  ng-class="{'selected-draft-schedule-row': item === vm.selectedScheduleDraft}" class="schedule-draft-item animate-repeat" layout="column">
                 <div layout="row" layout-align="center center">
+                    <md-progress-circular md-theme="{{themePrimaryButtons}}" class="smaller-progress-circular" ng-if="item.pendingVerify" class="md-primary" md-mode="indeterminate">
+                    </md-progress-circular>
+                    <md-tooltip ng-if="item.pendingVerify">Verification State: {{item.verification_state}}</md-tooltip>
+
                     <div layout="row" class="schedule-block-name-div">
                         <span class="schedule-block-id-text">{{item.id_code}}</span>
                         <i>{{item.owner}}</i>
                     </div>
-
                     <input ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
                            aria-label="Description" class="schedule-item-description-input" style="height: 27px;"
                            ng-model="item.description" placeholder="Description"/>
@@ -67,11 +65,12 @@
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
                     <span style="min-width: 50px; transition: 0s;" ng-show="!item.isDirty"></span>
-                    <md-button title="Save the draft" ng-show="item.isDirty" style="transition: 0s;" aria-label="Save Draft" class="sb-row-button"
+                    <span ng-if="item.pendingVerify" class="sb-row-button"></span>
+                    <md-button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty" style="transition: 0s;" aria-label="Save Draft" class="sb-row-button"
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
                         <span class="fa fa-check"></span>
                     </md-button>
-                    <md-button style="transition: 0s;" aria-label="Show Edit Menu" class="sb-row-button" ng-click="vm.openSchedulerEditMenu(item, $event);">
+                    <md-button ng-if="!item.pendingVerify" style="transition: 0s;" aria-label="Show Edit Menu" class="sb-row-button" ng-click="vm.openSchedulerEditMenu(item, $event);">
                         <span class="fa fa-ellipsis-v"></span>
                     </md-button>
                 </div>
@@ -91,7 +90,7 @@
                  ng-class="{'highlight-script-window': vm.selectedScheduleDraft !== null, 'md-whiteframe-z2': vm.selectedScheduleDraft === null}">
 
                 <div flex ng-if="vm.selectedScheduleDraft !== null" style="background: white;">
-                        <textarea readonly auto-grow>{{vm.selectedScheduleDraft | json:4}}</textarea>
+                    <textarea readonly auto-grow>{{vm.selectedScheduleDraft | json:4}}</textarea>
                 </div>
             </div>
         </div>
