changed operatorControl state name to operator-control, fixed handling server response to subscribing to sensors in monitor-service

--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -6,7 +6,7 @@
 
     <div flex layout-align="center center" class="navigation-buttons" md-theme="{{vm.themePrimaryButtons}}">
 
-        <md-button aria-label="Operator Control" class="md-raised md-primary" ng-click="vm.stateGo('operatorControl')">Operator Control</md-button>
+        <md-button aria-label="Operator Control" class="md-raised md-primary" ng-click="vm.stateGo('operator-control')">Operator Control</md-button>
         <md-button aria-label="Alarms" class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
         <md-button aria-label="Health and State" class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
         <md-button aria-label="Health and State" class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')">Receptor Status</md-button>
